--- a/src/app/start/start.page.html
+++ b/src/app/start/start.page.html
@@ -6,7 +6,14 @@
 </ion-header>
 
 <ion-content class="ion-align-items-center" color="secondary">
-
-  <ion-button color="primary" (click)="goToMatch()">Search Match</ion-button>
-
+    <ion-button style="
+                borderRadius: 0px;
+                width: 200px;
+                height: 200px;
+                font-size: x-large;
+                line-break: loose"
+                color="primary"
+                (click)="goToMatch()">
+      Search<br>Match
+    </ion-button>
 </ion-content>
