--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -22,13 +22,8 @@ ion-button {
   font-weight: bold;
 }
 
-.centered {
-  display: flex;
-  place-items: center;
-  place-content: center;
-}
 
 .select{
-  text-align: center;
+  margin: auto;
 }
 
