--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -20,7 +20,7 @@
       <ion-label class="ion-text-center" color="tertiary">Region</ion-label>
     </ion-item>
 
-    <ion-item class="centered" color="primary">
+    <ion-item color="primary">
       <ion-select [(ngModel)]="summonerInfo.region" class="select" interface="popover" color="primary">
         <ion-select-option value="BR1" color="light">Brazil</ion-select-option>
         <ion-select-option value="EUN1">Europe Nordic & East</ion-select-option>
