fixed firebase import error

--- a/src/app/match/match.page.html
+++ b/src/app/match/match.page.html
@@ -1,9 +1,44 @@
-<ion-header>
+<ion-header color="primary">
   <ion-toolbar>
-    <ion-title>match</ion-title>
+    <div class="rainbow-text flex-header" style="text-align: center;">
+      <span class="block-line"><span><span style="color:#FFFFFF;">W</span><span style="color:#FFFFFF;">e</span><span style="color:#FFB300;">C</span><span style="color:#FFB300;">o</span><span style="color:#FFB300;">u</span><span style="color:#ffb300;">n</span><span style="color:#ffb300;">t</span></span></span>
+      <ion-fab-button class="info-button"><ion-icon name="information-circle-outline"></ion-icon></ion-fab-button>
+    </div>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-align-items-center centered" color="secondary">
+  <ion-grid>
+    <ion-row>
+      <ion-col><image src=""></image> Champion</ion-col>
+      <ion-toggle>Boots</ion-toggle>
+      <ion-button>S1</ion-button>
+      <ion-button>S2</ion-button><img src="">
+    </ion-row>
+    <ion-row>
+      <ion-col>Champion</ion-col>
+      <ion-toggle>Boots</ion-toggle>
+      <ion-button>S1</ion-button>
+      <ion-button>S2</ion-button>
+    </ion-row>
+    <ion-row>
+      <ion-col>Champion</ion-col>
+      <ion-toggle>Boots</ion-toggle>
+      <ion-button>S1</ion-button>
+      <ion-button>S2</ion-button>
+    </ion-row>
+    <ion-row>
+      <ion-col>Champion</ion-col>
+      <ion-toggle>Boots</ion-toggle>
+      <ion-button>S1</ion-button>
+      <ion-button>S2</ion-button>
+    </ion-row>
+    <ion-row>
+      <ion-col>Champion</ion-col>
+      <ion-toggle>Boots</ion-toggle>
+      <ion-button>S1</ion-button>
+      <ion-button>S2</ion-button>
+    </ion-row>
 
+  </ion-grid>
 </ion-content>
