--- a/src/app/start/start.page.html
+++ b/src/app/start/start.page.html
@@ -1,11 +1,16 @@
+&nbsp;
+
 <ion-header color="primary">
   <ion-toolbar>
-    <ion-title class="ion-text-center" color="light">WeCount</ion-title>
-    <ion-icon class="ion-float-left" name="information-circle-outline"></ion-icon>
+    <div class="rainbow-text flex-header" style="text-align: center;">
+      <span class="block-line"><span><span style="color:#FFFFFF;">W</span><span style="color:#FFFFFF;">e</span><span style="color:#FFB300;">C</span><span style="color:#FFB300;">o</span><span style="color:#FFB300;">u</span><span style="color:#ffb300;">n</span><span style="color:#ffb300;">t</span></span></span>
+      <ion-fab-button class="info-button"><ion-icon name="information-circle-outline"></ion-icon></ion-fab-button>
+    </div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-align-items-center" color="secondary">
+  <div class="centered">
     <ion-button style="
                 borderRadius: 0px;
                 width: 200px;
@@ -14,6 +19,9 @@
                 line-break: loose"
                 color="primary"
                 (click)="goToMatch()">
-      Search<br>Match
+      <div class="rainbow-text search-button" style="text-align: center;">
+        <span style="color:#FFFFFF;">Search</span><span style="color:#FFB300;">Match</span>
+      </div>
     </ion-button>
+  </div>
 </ion-content>
