--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,46 +1,51 @@
 <ion-header color="primary">
   <ion-toolbar>
-    <ion-title class="ion-text-center" color="light">WeCount</ion-title>
-    <ion-icon class="ion-float-left" name="information-circle-outline"></ion-icon>
+    <div class="rainbow-text flex-header" style="text-align: center;">
+      <span class="block-line"><span><span style="color:#FFFFFF;">W</span><span style="color:#FFFFFF;">e</span><span style="color:#FFB300;">C</span><span style="color:#FFB300;">o</span><span style="color:#FFB300;">u</span><span style="color:#ffb300;">n</span><span style="color:#ffb300;">t</span></span></span>
+      <ion-fab-button class="info-button"><ion-icon name="information-circle-outline"></ion-icon></ion-fab-button>
+    </div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-align-items-center centered" color="secondary">
-  <ion-card color="medium">
+  <div class="centered">
+    <ion-card color="medium">
 
-    <ion-item color="dark">
-      <ion-label class="ion-text-center" color="tertiary">Summoner Name</ion-label>
-    </ion-item>
+      <ion-item color="dark">
+        <ion-label class="ion-text-center" color="tertiary">Summoner Name</ion-label>
+      </ion-item>
 
-    <ion-item color="primary">
-      <ion-input [(ngModel)]="summonerInfo.name" class="ion-text-center" color="light"></ion-input>
-    </ion-item>
-    <br>
-    <ion-item color="dark">
-      <ion-label class="ion-text-center" color="tertiary">Region</ion-label>
-    </ion-item>
+      <ion-item color="primary">
+        <ion-input [(ngModel)]="summonerInfo.name" class="ion-text-center" color="light"></ion-input>
+      </ion-item>
+      <br>
+      <ion-item color="dark">
+        <ion-label class="ion-text-center" color="tertiary">Region</ion-label>
+      </ion-item>
 
-    <ion-item color="primary">
-      <ion-select [(ngModel)]="summonerInfo.region" class="select" interface="popover" color="primary">
-        <ion-select-option value="BR1" color="light">Brazil</ion-select-option>
-        <ion-select-option value="EUN1">Europe Nordic & East</ion-select-option>
-        <ion-select-option value="EUW1">Europe West</ion-select-option>
-        <ion-select-option value="LA1">Latin America North</ion-select-option>
-        <ion-select-option value="LA2">Latin America South</ion-select-option>
-        <ion-select-option value="NA1">North America</ion-select-option>
-        <ion-select-option value="OC1">Oceania</ion-select-option>
-        <ion-select-option value="RU1">Russia</ion-select-option>
-        <ion-select-option value="TR1">Turkey</ion-select-option>
-        <ion-select-option value="JP1">Japan</ion-select-option>
-        <ion-select-option value="KR">Republic of Korea</ion-select-option>
-        <ion-select-option value="PBE">Public Beta Environment</ion-select-option>
-      </ion-select>
-    </ion-item>
+      <ion-item color="primary">
+        <ion-select [(ngModel)]="summonerInfo.region" class="select" interface="popover" color="primary">
+          <ion-select-option value="BR1" color="light">Brazil</ion-select-option>
+          <ion-select-option value="EUN1">Europe Nordic & East</ion-select-option>
+          <ion-select-option value="EUW1">Europe West</ion-select-option>
+          <ion-select-option value="LA1">Latin America North</ion-select-option>
+          <ion-select-option value="LA2">Latin America South</ion-select-option>
+          <ion-select-option value="NA1">North America</ion-select-option>
+          <ion-select-option value="OC1">Oceania</ion-select-option>
+          <ion-select-option value="RU1">Russia</ion-select-option>
+          <ion-select-option value="TR1">Turkey</ion-select-option>
+          <ion-select-option value="JP1">Japan</ion-select-option>
+          <ion-select-option value="KR">Republic of Korea</ion-select-option>
+          <ion-select-option value="PBE">Public Beta Environment</ion-select-option>
+        </ion-select>
+      </ion-item>
 
-    <ion-card-content>
-      <ion-button class="ion-margin" shape="round" color="primary" (click)="storeSummonerInfo()">Connect</ion-button>
-    </ion-card-content>
-  </ion-card>
+      <ion-card-content>
+        <ion-button class="ion-margin" shape="round" color="primary" (click)="storeSummonerInfo()">Connect</ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
 </ion-content>
 
 
