--- a/src/app/match/match.page.html
+++ b/src/app/match/match.page.html
@@ -10,35 +10,16 @@
 <ion-content class="ion-align-items-center centered" color="secondary">
   <ion-grid>
     <ion-row>
-      <ion-col><image src=""></image> Champion</ion-col>
-      <ion-toggle>Boots</ion-toggle>
-      <ion-button>S1</ion-button>
-      <ion-button>S2</ion-button><img src="">
+      <ion-col size="3.5">
+        <ion-img src="src/app/match/ChampionSquare.png"></ion-img>
+      </ion-col>
+      <ion-col size="2">
+        <app-ibol-toggle></app-ibol-toggle>
+      </ion-col>
+      <ion-row class="summrow" size="6">
+        <app-summoner-spell></app-summoner-spell>
+        <app-summoner-spell></app-summoner-spell>
+      </ion-row>
     </ion-row>
-    <ion-row>
-      <ion-col>Champion</ion-col>
-      <ion-toggle>Boots</ion-toggle>
-      <ion-button>S1</ion-button>
-      <ion-button>S2</ion-button>
-    </ion-row>
-    <ion-row>
-      <ion-col>Champion</ion-col>
-      <ion-toggle>Boots</ion-toggle>
-      <ion-button>S1</ion-button>
-      <ion-button>S2</ion-button>
-    </ion-row>
-    <ion-row>
-      <ion-col>Champion</ion-col>
-      <ion-toggle>Boots</ion-toggle>
-      <ion-button>S1</ion-button>
-      <ion-button>S2</ion-button>
-    </ion-row>
-    <ion-row>
-      <ion-col>Champion</ion-col>
-      <ion-toggle>Boots</ion-toggle>
-      <ion-button>S1</ion-button>
-      <ion-button>S2</ion-button>
-    </ion-row>
-
   </ion-grid>
 </ion-content>
