--- a/src/app/summoner-spell/summoner-spell.component.html
+++ b/src/app/summoner-spell/summoner-spell.component.html
@@ -1,5 +1,5 @@
 <div class="content" [class]="counting ? 'counting content' : 'content'"  (click)="onClick()">
-  <span *ngIf="counting" (click)="cancelCooldown()">{{currentCooldown}}</span>
-  <span *ngIf="confirm">X</span>
+  <span *ngIf="counting">{{currentCooldown}}</span>
+  <span *ngIf="confirmed">X</span>
   <img src="assets/Flash_HD.png" class="image" alt=""/>
 </div>
