--- a/src/app/ibol-toggle/ibol-toggle.component.html
+++ b/src/app/ibol-toggle/ibol-toggle.component.html
@@ -1,5 +1,4 @@
-<div class="content">
+<div [class]="isActive ? 'active content' : 'inactive content'" (click)="onClick()">
   <img src="assets/IBOL.png" class="image" alt=""/>
 </div>
-<p>heey ik doe het</p>
 
