--- a/src/app/summoner-icon/summoner-icon.component.scss
+++ b/src/app/summoner-icon/summoner-icon.component.scss
@@ -1,10 +1,8 @@
-$size: 40px;
+$size: 80px;
 
 .content {
   max-width: $size;
   max-height: $size;
-  position: absolute;
-  left: 75px;
   img{
     position: relative;
     transition: all 0.5s ease-in-out 0s;
@@ -14,17 +12,14 @@ $size: 40px;
 .image {
   width: $size;
   height: $size;
-  border-radius: 15px;
-  position: absolute;
-  left: -3px;
-  top: 15px;
-  box-shadow: 0px 0px 10px 2px rgba(84,200,167,0.5);
+  border-radius: 10px;
+  position: relative;
+  box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.75), 0px 0px 10px 5px rgba(0,0,0,0.75);
 }
 
 .inactive {
   img {
     filter: grayscale(100%);
-    box-shadow: none;
   }
 }
 
